--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset="UTF-8" />
+    <!-- Reference external CSS stylesheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+     <!-- Tab description online -->
+    <title>Social Media Revolution </title>
 </head>
 
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- List all navigation links -->
         <div>
             <ul>
                 <li>
@@ -24,8 +27,12 @@
             </ul>
         </div>
     </div>
+
+    <!-- First image under class "hero" -->
     <div class="hero"></div>
+
     <div class="content">
+        <!-- search-engine-optimization subsection -->
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -33,6 +40,8 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
+
+        <!-- online-reputation-management subsection -->
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -40,6 +49,8 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
+
+        <!-- social-media-marketing subsection -->
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -48,7 +59,9 @@
             </p>
         </div>
     </div>
+
     <div class="benefits">
+        <!-- Lead Generation subsection -->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -56,6 +69,8 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
+
+        <!-- Brand Awareness subsection -->
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
@@ -63,6 +78,8 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
+
+        <!-- Cost Management subsection -->
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
@@ -71,6 +88,7 @@
             </p>
         </div>
     </div>
+
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
